updated distro ant to include swagger spec files